--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
   }
   footer{
     background-color: hsl(237, 18%, 59%);
-    background-image: url(/pattern-hills.svg);
+    background-image: url(pattern-hills.svg);
   }
   main {
     /* border: 2px solid #008000; */
